--- a/exercicios/exercicios_diversos.ipynb
+++ b/exercicios/exercicios_diversos.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
+    "/import time\n",
     "\n",
     "print(\"Vamos testar a função time\")\n",
     "\n",
