--- a/exercicios/exercicios_diversos.ipynb
+++ b/exercicios/exercicios_diversos.ipynb
@@ -34,9 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "é u\n",
+      " Frase teste.\n",
+      "Esta é uma\n",
+      "esta é uma frase teste.\n",
+      "ESTA É UMA FRASE TESTE.\n",
+      "Esta É Uma Frase Teste.\n",
+      "Esta é uma frase teste.\n",
+      "['Esta', 'é', 'uma', 'Frase', 'teste.']\n",
+      "['Est', ' é um', ' Fr', 'se teste.']\n"
+     ]
+    }
+   ],
    "source": [
     "# Manipulação de strings\n",
     "# para mais exemplos visitar https://www.hashtagtreinamentos.com/string-no-python?gad_source=1&gclid=CjwKCAjww_iwBhApEiwAuG6ccJvWpHb_SSRHctp_5yv1UP6BlgtQGZMtQAOtDrUjgWIpElhZtKRK9hoCdIAQAvD_BwE\n",
@@ -65,23 +82,18 @@
     "print(t)\n",
     "\n",
     "t = texto.capitalize() # retorna APENAS a primeira letra da frase como maiúscula\n",
-    "print(t)"
+    "print(t)\n",
+    "\n",
+    "print(texto.split()) # cria uma lista dividindo a string em caracteres específicos. Vazio = espaço em branco.\n",
+    "\n",
+    "print(texto.split('a'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A data e hora atual é 2024-04-16 22:43:26.620639\n",
-      "A data e hora atual é 16/04/2024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -118,18 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O resultado da conta é 5.551115123125783e-17.\n",
-      "O resultado da conta agora é 0.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Biblioteca para manipulação de números decimais\n",
     "\n",
