--- a/exercicios/estatistica/populacao_e_amostra.ipynb
+++ b/exercicios/estatistica/populacao_e_amostra.ipynb
@@ -73,7 +73,9 @@
    "source": [
     "# seleciona aleatoriamente amostra na base de dados\n",
     "df_amostra_aleatoria_simples = dataset.sample(n = 100) \n",
-    "# O parâmetro replace =True/False habilita ou desabilita a repetição de elementos"
+    "# O parâmetro replace =True/False habilita ou desabilita a repetição de elementos\n",
+    "# o padrão é False\n",
+    "# parâmetro random_state = <número> obterá os mesmos números aleatórios todas as vezes\n"
    ]
   },
   {
@@ -98,177 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>workclass</th>\n",
-       "      <th>final-weight</th>\n",
-       "      <th>education</th>\n",
-       "      <th>education-num</th>\n",
-       "      <th>marital-status</th>\n",
-       "      <th>occupation</th>\n",
-       "      <th>relationship</th>\n",
-       "      <th>race</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>capital-gain</th>\n",
-       "      <th>capital-loos</th>\n",
-       "      <th>hour-per-week</th>\n",
-       "      <th>native-country</th>\n",
-       "      <th>income</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9724</th>\n",
-       "      <td>26</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>176520</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20843</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>126368</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20211</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>178417</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Craft-repair</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11946</th>\n",
-       "      <td>60</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>166386</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Machine-op-inspct</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>Asian-Pac-Islander</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Hong</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19463</th>\n",
-       "      <td>55</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>191367</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       age workclass  final-weight      education  education-num  \\\n",
-       "9724    26   Private        176520        HS-grad              9   \n",
-       "20843   53   Private        126368   Some-college             10   \n",
-       "20211   40   Private        178417        HS-grad              9   \n",
-       "11946   60   Private        166386           11th              7   \n",
-       "19463   55   Private        191367        HS-grad              9   \n",
-       "\n",
-       "            marital-status          occupation    relationship  \\\n",
-       "9724         Never-married        Adm-clerical   Not-in-family   \n",
-       "20843        Never-married        Adm-clerical   Not-in-family   \n",
-       "20211   Married-civ-spouse        Craft-repair         Husband   \n",
-       "11946   Married-civ-spouse   Machine-op-inspct            Wife   \n",
-       "19463   Married-civ-spouse               Sales         Husband   \n",
-       "\n",
-       "                      race      sex  capital-gain  capital-loos  \\\n",
-       "9724                 White     Male             0             0   \n",
-       "20843                White   Female             0             0   \n",
-       "20211                White     Male             0             0   \n",
-       "11946   Asian-Pac-Islander   Female             0             0   \n",
-       "19463                White     Male             0             0   \n",
-       "\n",
-       "       hour-per-week  native-country  income  \n",
-       "9724              53   United-States   <=50K  \n",
-       "20843             50   United-States    >50K  \n",
-       "20211             35   United-States   <=50K  \n",
-       "11946             30            Hong   <=50K  \n",
-       "19463             40   United-States   <=50K  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_amostra_aleatoria_simples.head()"
    ]
